--- a/Module 2/layouts/lesson files/grid.html
+++ b/Module 2/layouts/lesson files/grid.html
@@ -23,8 +23,7 @@
       gap: -->
 <!-- Placing Items:
       grid-row: 
-      grid-column:
-      grid-area -->
+      grid-column: -->
 <!-- Placing Items In Named Areas:
       grid-template-areas
       grid-area -->
